syntax = "proto3";

//option java_multiple_files = true;

option java_package = "microservice.proto.grpc";

option java_outer_classname = "ProductProto";

message Product{
  int64 id = 1;
  string productName = 2;
  string productDescription = 3;
  int32 productPrice = 4;
  int32  productQuantity = 5;
}

service ProductService{
  rpc GetProductById(ProductRequest) returns (ProductResponse);
}

message ProductRequest{
  int64 id = 1;
}

message ProductResponse{
  Product product = 1;
}

